# tesi

./: .cdsapirc  .dockerignore  .env  .env.example  .gitignore  13_year_corn.ipynb  Dockerfile  README.md  climate_generative_model.ipynb  crop_optimizer.ipynb  crop_yield_model.ipynb  dev-compose.yml  docker-compose.yml  entrypoint.sh  field_70_2017.csv  field_71_2017.csv  genetic.py  nasa_response.json  netcdf_test.py  pyproject.toml  start_be.sh  success.csv  test.csv  test.grib  test.grib.5b7b6.idx  test_model.ipynb
alembic/: env.py
data/: .~lock.Database_processed.csv#  Database_processed.csv  FHP_09_Portmann_2011_Appx_L_TabL1__CalcTabD1_Q_MC_country.CSV  FHP_09_Portmann_2011_Appx_L_TabL1__CalcTabD1_Q_MC_country.xlsx  climate_data_last_12_months_example.csv  copernicus.csv  copernicus_taranto.csv  crops_example.csv  future_climate_data_example.csv  future_climate_example.csv  past_climate_data_example.csv  past_climate_example.csv  taranto.csv  taranto_ml.csv
docs/: chatgpt.md  indice.md  nasa_response_example.json  sources.md
frontend/: .env  .env.production  Dockerfile  package.json
ml_models/: climate_generative_model.pkl  climate_x_scaler.pkl
scripts/: create_user.py  delete_user.py  download_future_climate_data.py  download_past_climate_data_for_locations.py  export_locations.py  export_past_climate_data.py  import_crop_yield_data.py  import_past_climate_data.py  logout_user.py  netcdf_test.py
tesi/: __init__.py  climate_generative_model.py  config.py  copernicus.py  copernicus_data_store_api.py  deep_soil_extract_field_70.py  dtos.py  giant_data.ipynb  (+11 more)
(+200 files in other folders)
